[package]
name = "sentinel-monitor"
version = "0.1.0"
authors = ["Andrey Kononov <flowneee3@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
tokio = "0.1"
tokio-threadpool = "0.1"
tokio-timer = "0.2"
either = "1.5"
log = "0.4"
env_logger = "0.6"
lazy_static = "1.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
failure = "0.1.5"

# Sentinel's dependencies
sysinfo = "0.8.4"
reqwest = "0.9.17"

# Messenger's dependencies
lettre = "0.9"
lettre_email = "0.9"
